--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "width": 3,
         "file": "scoreboard.html",
         "headerColor": "#00BEBE",
-        "workspace": "Controls"
+        "workspace": "Relay Control"
       }
     ],
     "graphics": [
